--- a/smart-contract/package.json
+++ b/smart-contract/package.json
@@ -1,21 +1,21 @@
 {
   "name": "smart-contract",
   "version": "1.0.0",
-  "type": "module",
   "devDependencies": {
-    "@nomicfoundation/hardhat-toolbox": "^6.1.0",
+    "@nomicfoundation/hardhat-toolbox": "^4.0.0",
     "@types/chai": "^4.3.20",
     "@types/chai-as-promised": "^8.0.2",
     "@types/mocha": "^10.0.10",
     "@types/node": "^22.19.3",
     "chai": "^4.3.0",
-    "ethers": "^6.16.0",
+    "ethers": "^6.10.0",
     "forge-std": "github:foundry-rs/forge-std#v1.9.4",
-    "hardhat": "^3.1.3",
+    "hardhat": "^2.19.4",
     "mocha": "^11.7.5",
-    "typescript": "~5.8.0"
+    "typescript": "^5.3.3"
   },
   "dependencies": {
-    "@openzeppelin/contracts": "^5.4.0"
+    "@openzeppelin/contracts": "^5.4.0",
+    "dotenv": "^17.2.3"
   }
 }
